[gd_scene load_steps=16 format=2]

[ext_resource path="res://overlap/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level_pedo/assets/png/efecto acido sheet.png" type="Texture" id=2]
[ext_resource path="res://levels/level_pedo/enemy/boss_3.gd" type="Script" id=3]
[ext_resource path="res://levels/level_pedo/assets/png/boss1_sheet.png" type="Texture" id=5]
[ext_resource path="res://levels/level_pedo/assets/png/cabellera_saiyayin_2.png" type="Texture" id=6]
[ext_resource path="res://levels/level_pedo/assets/png/aura_boss_2_sheet.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 623, 815 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 623, 0, 623, 815 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 1246, 0, 623, 815 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 27.3077
height = 0.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 33.654
height = 88.5439

[sub_resource type="Animation" id=7]
resource_name = "attack"
loop = true

[sub_resource type="Animation" id=8]
resource_name = "walk"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 195.458

[node name="boss_3" type="KinematicBody2D" groups=[
"enemies",
]]
position = Vector2( 10.7614, -58.8718 )
scale = Vector2( 0.8, 0.8 )
collision_layer = 16
collision_mask = 0
script = ExtResource( 3 )

[node name="aura_saiya" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -7.41282, 24.4115 )
scale = Vector2( 0.223954, 0.262691 )
frames = SubResource( 4 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9.43256, 6.99762 )
shape = SubResource( 5 )
disabled = true

[node name="HurtBox" parent="." instance=ExtResource( 1 )]
position = Vector2( 1.68176, 3.36362 )
collision_layer = 16
collision_mask = 2
script = null

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -13.9936, 34.3489 )
shape = SubResource( 6 )

[node name="effectTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="lifeRed" type="ColorRect" parent="."]
margin_left = -21.8358
margin_top = -113.028
margin_right = 18.1642
margin_bottom = -111.028
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeGreen" type="ColorRect" parent="."]
margin_left = -21.8358
margin_top = -113.028
margin_right = 18.1642
margin_bottom = -111.028
color = Color( 0.168627, 0.992157, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 3.24889, -29.6029 )
scale = Vector2( 0.334044, 0.343209 )
texture = ExtResource( 2 )
hframes = 3

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -2.77843, 35.6473 )
scale = Vector2( 0.590422, 0.55973 )
texture = ExtResource( 5 )
hframes = 8

[node name="cabellera_saiyayin_2" type="Sprite" parent="."]
visible = false
position = Vector2( -18.7906, -23.5614 )
scale = Vector2( 0.697529, 0.809787 )
texture = ExtResource( 6 )

[node name="buffer" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="buffer"]
position = Vector2( -13.2582, 74.2462 )
shape = SubResource( 9 )

[node name="rageTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="idleTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="kameTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="effectTimer" to="." method="_on_effectTimer_timeout"]
[connection signal="timeout" from="rageTimer" to="." method="_on_rageTimer_timeout"]
[connection signal="timeout" from="idleTimer" to="." method="_on_idleTimer_timeout"]
[connection signal="timeout" from="kameTimer" to="." method="_on_kameTimer_timeout"]

[editable path="HurtBox"]
